--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   </head>
   <body>
     <div id="root"></div>
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=<%=kakaoJavaScriptKey%>&libraries=services,clusterer"
+    ></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
